force-app/main/default/objects/QCC_Suggested_Recovery__mdt/QCC_Suggested_Recovery__mdt.object-meta.xml
<CustomObject>
    <description>QCC: This is used for suggested recoveries mappings</description>
    <label>QCC Suggested Recovery</label>
    <pluralLabel>QCC Suggested Recoveries</pluralLabel>
</CustomObject>