force-app/main/default/objects/QCC_Suggested_Recovery__mdt/fields/Cabin__c.field-meta.xml
<CustomField>
    <fullName>Cabin__c</fullName>
    <description>This field is used by QCC business unit and is relevant for storing cabin type values for in-flight experience. E.g. Business, Premium Economy etc</description>
    <label>Cabin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
                <default>true</default>
                <label>Business</label>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Premium Economy</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>