force-app/main/default/objects/QCC_Suggested_Recovery__mdt/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Broken Seat – Economy/Premium</fullName>
            </value>
            <value>
                <fullName>Broken Seat – First/Business</fullName>
            </value>
            <value>
                <fullName>Next Day Rebooking</fullName>
            </value>
            <value>
                <fullName>Nil catering, ran out of meals</fullName>
            </value>
            <value>
                <fullName>Not functioning</fullName>
            </value>
            <value>
                <fullName>Not provided</fullName>
            </value>
            <value>
                <fullName>Same Day Rebooking</fullName>
            </value>
            <value>
                <fullName>Nil catering whole aircraft</fullName>
            </value>
            <value>
                <fullName>Presentation/quality of selection</fullName>
            </value>
            <value>
                <fullName>Presentation Quality</fullName>
            </value>
            <value>
                <fullName>App/nil in seat IFE</fullName>
            </value>
            <value>
                <fullName>Broken Seat -First/Business</fullName>
                <isActive>false</isActive>
                <label>Broken Seat -First/Business</label>
            </value>
            <value>
                <fullName>Broken Seat- Economy/Premium</fullName>
                <isActive>false</isActive>
                <label>Broken Seat- Economy/Premium</label>
            </value>
            <value>
                <fullName>Nil catering. Ran out of meals</fullName>
                <isActive>false</isActive>
                <label>Nil catering. Ran out of meals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>