force-app/main/default/objects/QCC_Suggested_Recovery__mdt/fields/Flight_Duration__c.field-meta.xml
<CustomField>
    <fullName>Flight_Duration__c</fullName>
    <label>Flight Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-4</fullName>
            </value>
            <value>
                <fullName>4-10</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>5-9</fullName>
            </value>
            <value>
                <fullName>9+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>