force-app/main/default/objects/QCC_Suggested_Recovery__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flight Disruptions</fullName>
                <default>true</default>
                <label>Flight Disruptions</label>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Departure Airport</fullName>
            </value>
            <value>
                <fullName>Lounges</fullName>
            </value>
            <value>
                <fullName>Arrival Airport</fullName>
            </value>
            <value>
                <fullName>In-Flight</fullName>
            </value>
            <value>
                <fullName>Frequent Flyer</fullName>
            </value>
            <value>
                <fullName>Qantas.com</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Insurance letter</fullName>
            </value>
            <value>
                <fullName>Request Copy of Tax Invoice</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>