force-app/main/default/objects/QCC_Suggested_Recovery__mdt/fields/Point_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Point_Calculation__c</fullName>
    <label>Point Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier</fullName>
                <default>true</default>
                <label>Tier</label>
            </value>
            <value>
                <fullName>Tier and Flight Duration</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Cabin and Flight Duration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>