force-app/main/default/objects/QCC_Suggested_Recovery__mdt/fields/Recovery_Type__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Type__c</fullName>
    <label>Recovery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>