force-app/main/default/objects/QCC_Suggested_Recovery__mdt/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed Baggage</fullName>
            </value>
            <value>
                <fullName>Delayed Priority Baggage</fullName>
            </value>
            <value>
                <fullName>Damaged Baggage</fullName>
            </value>
            <value>
                <fullName>Damaged Wheelchair</fullName>
            </value>
            <value>
                <fullName>Damaged Other</fullName>
            </value>
            <value>
                <fullName>Lost Baggage</fullName>
            </value>
            <value>
                <fullName>Beverage Payment</fullName>
            </value>
            <value>
                <fullName>Beverage Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Catering Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Menu Select Meal not Provided</fullName>
            </value>
            <value>
                <fullName>Special Meal Quality/Provision</fullName>
            </value>
            <value>
                <fullName>Q Streaming</fullName>
            </value>
            <value>
                <fullName>Wi-Fi Availability/Functionality</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Bassinette Availability</fullName>
            </value>
            <value>
                <fullName>Comfort/Functionality</fullName>
            </value>
            <value>
                <fullName>Seating Allocation</fullName>
            </value>
            <value>
                <fullName>Prepaid seat not provided</fullName>
            </value>
            <value>
                <fullName>Selected seat not provided</fullName>
            </value>
            <value>
                <fullName>Did not receive Frequent Flyer seating preference</fullName>
            </value>
            <value>
                <fullName>Assistance/Supervision</fullName>
            </value>
            <value>
                <fullName>Identification/Documentation</fullName>
            </value>
            <value>
                <fullName>Fees/Cost/Price</fullName>
            </value>
            <value>
                <fullName>In-Flight Seating</fullName>
            </value>
            <value>
                <fullName>Ticket errors rectified prior to travel</fullName>
            </value>
            <value>
                <fullName>Flight Cancelled, No alternative</fullName>
            </value>
            <value>
                <fullName>Car did not arrive</fullName>
            </value>
            <value>
                <fullName>Ticket error -  Same day rebooking</fullName>
            </value>
            <value>
                <fullName>QF Booking Throughfare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>