force-app/main/default/objects/QCC_Suggested_Recovery__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
                <default>true</default>
                <label>Complaint</label>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Medical Assistance</fullName>
            </value>
            <value>
                <fullName>On-the-spot recovery</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Surprise and Delight</fullName>
            </value>
            <value>
                <fullName>Extreme Service Failure</fullName>
            </value>
            <value>
                <fullName>Baggage Claim</fullName>
            </value>
            <value>
                <fullName>Further Action Required</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>